# mcbe

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
include/game/block/: StoneBlock.h  block.h
include/game/options/: BoolOption.h  FloatOption.h  IntOption.h  Option.h  Options.h  StringOption.h
include/mce/client/: ClientInstance.h
include/mce/client/gui/screen/: SettingsScreen.h  UIScreenFactory.h
include/mce/common/sound/: SoundManager.h
include/mce/core/: TelemetryManager.h
include/mce/json/: Json.h
include/mce/platform/: DeviceInfo.h
include/mce/render/: GraphicsDevice.h  ShaderManager.h
src/: main.cpp
src/game/block/: StoneBlock.cpp  block.cpp
src/game/options/: BoolOption.cpp  FloatOption.cpp  IntOption.cpp  Option.cpp  Options.cpp  StringOption.cpp
src/mce/client/: ClientInstance.cpp
src/mce/client/gui/screen/: SettingsScreen.cpp  UIScreenFactory.cpp
src/mce/common/sound/: SoundManager.cpp
src/mce/core/: TelemetryManager.cpp
src/mce/platform/: DeviceInfo.cpp
src/mce/render/: GraphicsDevice.cpp  ShaderManager.cpp
